Adding main menu and telemetry plugins

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,6 @@
+[Analytics]
+ProviderModuleName=GameAnalytics
+
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
@@ -11,14 +14,13 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/Maps/BaseMap.BaseMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
-
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/GAT251_Project2")
@@ -29,6 +31,13 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/GameAnalyticsEditor.GameAnalyticsProjectSettings]
+Username=johngheadley@gmail.com
+IosGameKey=
+IosSecretKey=
+WindowsGameKey=c260c5db91297b6dd1d7c74e453bb2b6
+WindowsSecretKey=b60d9f5de57f13b98d4c1b63bc55ab4df44d8dd2
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -74,5 +83,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
