--- a/GAT251_Project2.uproject
+++ b/GAT251_Project2.uproject
@@ -12,6 +12,10 @@
 		{
 			"Name": "AnalyticsBlueprintLibrary",
 			"Enabled": true
+		},
+		{
+			"Name": "HoudiniEngine",
+			"Enabled": true
 		}
 	]
 }
