New tutorial and fixing references

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Archetypes/NeonPainterInstance.NeonPainterInstance_C
-GameDefaultMap=/Game/Maps/BaseMap.BaseMap
+GameDefaultMap=/Game/Maps/Tutorial.Tutorial
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -38,6 +38,11 @@ IosGameKey=
 IosSecretKey=
 WindowsGameKey=c260c5db91297b6dd1d7c74e453bb2b6
 WindowsSecretKey=b60d9f5de57f13b98d4c1b63bc55ab4df44d8dd2
+
+[/Script/PlayFabCommon.PlayFabRuntimeSettings]
+TitleId=4BFF
+DeveloperSecretKey=N1DX7JHFFN59YU6GRGIEFTQKN5AZUO6SK8CSTTCS3D1TMJ9N7F
+ProductionEnvironmentURL="https://4bff.playfabapi.com:443"
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
