--- a/GAT251_Project2.uproject
+++ b/GAT251_Project2.uproject
@@ -6,7 +6,7 @@
 	"Plugins": [
 		{
 			"Name": "GameAnalytics",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d070c3fab7b74c08bab3a89c9cbf4490"
 		},
 		{
@@ -21,6 +21,10 @@
 			"Name": "PlayFab",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/217fdf581b784571af03d3fb6580368f"
+		},
+		{
+			"Name": "EpicLeaderboard",
+			"Enabled": true
 		}
 	]
 }
