--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,9 +8,9 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
-StagingDirectory=(Path="C:/Users/g.headley/Documents/NeonPainter")
-FullRebuild=True
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="C:/Users/Johng/OneDrive/OneNote Notebooks/NeonPainterexe")
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -40,7 +40,8 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/InfinityBladeEffects")
-+DirectoriesToNeverCook=(Path="/Game/C:/Users/g.headley/Documents/Unreal Projects/NeonPainter/Saved/Cooked/WindowsNoEditor/GAT251_Project2/Content/Materials/repeating-geometrical-square-background-pattern-vector-graphic-design-from-random-rotated-squares-with-opacity-effect_1164-1119.uasset")
++DirectoriesToNeverCook=(Path="/Game/Materials")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
