--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,7 +42,10 @@ WindowsSecretKey=b60d9f5de57f13b98d4c1b63bc55ab4df44d8dd2
 [/Script/PlayFabCommon.PlayFabRuntimeSettings]
 TitleId=4BFF
 DeveloperSecretKey=N1DX7JHFFN59YU6GRGIEFTQKN5AZUO6SK8CSTTCS3D1TMJ9N7F
-ProductionEnvironmentURL="https://4bff.playfabapi.com:443"
+ProductionEnvironmentURL=.playfabapi.com
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.LensFlare=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
