--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,7 +45,7 @@ DeveloperSecretKey=N1DX7JHFFN59YU6GRGIEFTQKN5AZUO6SK8CSTTCS3D1TMJ9N7F
 ProductionEnvironmentURL=.playfabapi.com
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.LensFlare=True
+r.DefaultFeature.LensFlare=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -91,5 +91,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
