--- a/GAT251_Project2.uproject
+++ b/GAT251_Project2.uproject
@@ -19,12 +19,7 @@
 		},
 		{
 			"Name": "EpicLeaderboard",
-			"Enabled": true
-		},
-		{
-			"Name": "PlayFab",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/217fdf581b784571af03d3fb6580368f"
+			"Enabled": false
 		}
 	]
 }
