--- a/GAT251_Project2.uproject
+++ b/GAT251_Project2.uproject
@@ -20,6 +20,11 @@
 		{
 			"Name": "EpicLeaderboard",
 			"Enabled": false
+		},
+		{
+			"Name": "PlayFab",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/217fdf581b784571af03d3fb6580368f"
 		}
 	]
 }
