Adding more telemetry. Getting ready for final submit

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,10 +8,10 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="C:/Users/Johng/OneDrive/OneNote Notebooks/NeonPainterexe")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -43,5 +43,4 @@ bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/Materials")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
